# bb_binary

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  setup.py
bb_binary/: CMakeLists.txt  bb_binary.h  bb_binary_schema.capnp  java.capnp
bb_binary/src/: bb_binary.cpp  compress.cpp  compress.h  main.cpp
cmake/: FindLZ4.cmake
docs/: conf.py  get_imports.sh  index.rst
docs/api/: common.rst  constants.rst  converting.rst  init.rst  parsing.rst  repository.rst  schema.rst
java/: build.sbt
java/src/main/scala/: Example.scala
python/: setup.cfg
python/bb_binary/: __init__.py  bb_binary_schema.capnp  common.py  constants.py  converting.py  java.capnp  parsing.py  repository.py
python/bb_binary/scripts/: gt_to_hdf5.py
python/test/: conftest.py  test_bb_binary.py  test_benchmark_repo.py  test_converting.py  test_parsing.py  test_repository.py
schema/: bb_binary_schema.fbs
test/: CMakeLists.txt  test_compression.cpp  test_csv_to_bbb.cpp
test/data/: CMakeLists.txt  Cam_0_20150920000000_185682.csv  Cam_0_20150920000001_852777.csv  Cam_0_20150920000002_519815.csv  Cam_0_20150920000002_852834.csv  csv_files.txt
tests/data/: Cam_0_20150920000000_519701.csv  Cam_0_20150920000000_852720.csv  Cam_0_20150920000001_185739.csv  Cam_0_20150920000001_519758.csv  Cam_0_20150920000002_185796.csv  Cam_0_20150920000003_185853.csv
